--- a/Views/main_window.glade
+++ b/Views/main_window.glade
@@ -228,7 +228,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkListBox">
+              <object class="GtkTreeView" id="all_list_box">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
               </object>
