--- a/Views/main_window.glade
+++ b/Views/main_window.glade
@@ -182,9 +182,12 @@
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <child>
-              <object class="GtkListBox">
+              <object class="GtkTreeView" id="col_treeview">
                 <property name="visible">True</property>
-                <property name="can-focus">False</property>
+                <property name="can-focus">True</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
+                </child>
               </object>
             </child>
             <child type="tab">
@@ -198,18 +201,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkExpander">
+              <object class="GtkBox" id="cat_box">
                 <property name="visible">True</property>
-                <property name="can-focus">True</property>
+                <property name="can-focus">False</property>
+                <property name="orientation">vertical</property>
                 <child>
                   <placeholder/>
-                </child>
-                <child type="label">
-                  <object class="GtkLabel">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">expander</property>
-                  </object>
                 </child>
               </object>
               <packing>
@@ -228,9 +225,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkTreeView" id="all_list_box">
+              <object class="GtkTreeView" id="all_treeview">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
+                </child>
               </object>
               <packing>
                 <property name="position">2</property>
